# software-integration

./: LICENSE  README.md
00._Miscellaneous/: stripeiframe.html
00._SMS_integration/: .env-example  README.md  index.html  package-lock.json  package.json  server.js  smsHandler.js
00._data_format_translation_servers/data/: me.txt  me.xml  me.yaml
00._data_format_translation_servers/node/: app.js
00._data_format_translation_servers/python/: main.py  my_parser.py  pyproject.toml
01_modules/html_modules/: index.html  index.js  myModule.js
01_modules/html_no_module/: index.html  index.js  myModule.js
01_modules/node_commonjs/: index.js  myModule.js
01_modules/node_esmodules/: index.js  myModule.js
01_modules/python/: main.py
02._data_formats/: me.csv  me.json  me.xml
02._data_formats/encoding_decoding/: encodeDecore.js  encode_decode.py
02._data_formats/homework/: README.md  me.csv  my_parser.py  package-lock.json  package.json  parser.js  parser.py  requirements.txt
03._python_environment/virtualenv/: pyvenv.cfg
04._basic_servers/node/: app.js  package.json
04._basic_servers/python/: main.py  pyproject.toml
05._dates/node/: index.js
06._server_to_server/node/: index.js
06._server_to_server/python/: main.py  pyproject.toml
07._dotenv/node/: .envSample  index.js  package-lock.json  package.json
09._openAPI/node/: app.js  package-lock.json  package.json
09._openAPI/python/: main.py  pyproject.toml
09._openAPI/python/routers/: spacecraft_router.py  users_router.py
12._server_sent_events/node/: package-lock.json  package.json  server.js
13._github_webhooks/node/: index.js
15._websockets/node/: index.html  index.js
16._CORS/node/: index.js  package-lock.json  package.json
17._multipart_forms/: README.md  index.html
17._multipart_forms/node/: index.js  package.json
18._redis/python/basic_redis_usage/: main.py  pyproject.toml
19._web_scraping/: README.md  pyproject.toml  webscraper.py
21._sqlite/node/: index.js  (+3 more)
(+21 files in other folders)
