[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Alexander <alex030tstud.kea.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.96.1"
requests = "^2.31.0"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
