[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Alexander <alex030tstud.kea.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.20.0"
fastapi = "^0.92.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
